1.3
New Features/Changes:
 - Added Desert terrain type

1.2
New Features/Changes:
 - Added terrain and elevation to the inspector palette
 
Bug Fixes:
 - Fixed a mixup that caused rough level 1 terrain to not paint properly, among other things
 - Made the hex inspector window slightly larger, and put it in a different location by default
 
1.1 January 11, 2004
Bug Fixes:
 - Cursor aims properly on Windows now (it was too big previously)
 
1.1b November 15, 2003
New Features/Changes:
 - Selection now uses an easier-to-spot red-black dash instead of just a thick black line
 - Selection now selects multiple hexes by default (you don't need to hold shift down). Control-clicking will deselect all when using the select tool
 - Control/Command-1,2,3,4,5 now select brush size
 - New 'Export to PNG' feature in the File menu. This will create a .png file of the map at the current zoom level (doing this at a high zoom will result in very large files)
 - Mouse wheel now zooms in or out
 
Bug Fixes:
 - Cancel button on 'New Map' dialog box now works
 - All keystrokes are now part of the menu system (new 'Tool' menu). This should make them more robust
 
Performance Improvements:
 - Zooming, scrolling, and drawing hexes are all much faster

1.0b2 May 31, 2003
New Features:
- Added 'Inspector' palette which shows various information about whatever hex is currently under the mouse

Bug Fixes:
- Fixed bug that allowed palettes to show up on startup regardless of 'show/hide' preference


1.0b1 Jan 23, 2003
- Initial version