@@ -1,3 +1,3 @@
 Main-Class: btthud.ui.Thump
-Implementation-Version: Sat Apr 30 22:44:58 PDT 2005
+Implementation-Version: Sat Apr 30 23:57:53 PDT 2005
 
